--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,7 @@
     <groupId>com.newcode-leetcode</groupId>
     <artifactId>salme</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>salme</name>
-    <description>Demo project for Spring Boot</description>
+
 
     <properties>
         <java.version>1.8</java.version>
@@ -34,6 +33,11 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
